--- a/index.html
+++ b/index.html
@@ -4,8 +4,122 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css">
     <title>Star Battle</title>
   </head>
 
-  <body></body>
+  <body>
+    <div id="app">
+      <div id="logo">
+        <img src="./img/logo-01.png" alt="logo" />
+      </div>
+      <div id="container" class="absolute">
+        <div id="start" class="column">
+          <p class="message pre">
+            1. Usa W, A, S, D para controlar la nave espacial, presiona Espacio para lanzar. 2.
+            El valor inicial del combustible es 15, y cada segundo decrece 1 punto, cuando el valor del combustible es 0, el juego termina. 3.
+            Tocar una botella de combustible que se ha caído añade 15 puntos a un máximo de 30 puntos. 4.
+            Golpea un barco enemigo por 5 puntos. Los planetas deben ser golpeados dos veces, sumando 10 puntos. Deduce 10 puntos por golpear a un aliado. 5.
+            Golpea al enemigo pierde 15 puntos de combustible, golpea al amigo resta 10 puntos. 6. El juego permite puntuaciones negativas. 7. Presione P
+            Pausa el juego, presiona M para silenciar. ¡Empieza tu Guerra de las Galaxias!
+          </p>
+          <button id="start-btn" class="btn">
+            <p>comenzar el juego</p>
+            <p>Cargando...</p>
+          </button>
+        </div>
+        <div id="play" class="absolute">
+          <canvas id="canvas" class="absolute"></canvas>
+          <div class="content absolute">
+            <div class="header">
+              <ul class="info">
+                <li>
+                  <img src="./img/time3.png" alt="time" />
+                  <span id="time">00</span>
+                </li>
+                <li>
+                  <img src="./img/fuel2.png" alt="fuel" />
+                  <span id="fuel">00</span>
+                </li>
+                <li>
+                  <img src="./img/score.png" alt="score" />
+                  <span id="score">00</span>
+                </li>
+                <li>
+                  <img src="./img/playerBullet.png" alt="score" />
+                  <span id="shoot">00</span>
+                </li>
+              </ul>
+              <ul class="option">
+                <li id="game-font-size-add">
+                  <img class="pause" src="./img/a+.png" alt="time" />
+                </li>
+                <li id="game-font-size-reduce">
+                  <img class="pause" src="./img/a-.png" alt="time" />
+                </li>
+                <li id="game-mute-btn">
+                  <img class="pause" src="./img/mute.png" alt="time" />
+                  <img class="pause" src="./img/speaker.png" alt="time" />
+                </li>
+                <li id="game-pause-btn">
+                  <img class="pause" src="./img/play.png" alt="time" />
+                  <img class="pause" src="./img/pause.png" alt="time" />
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div id="over" class="column absolute">
+          <div class="game-data">
+            <p class="message">
+              <span>
+                <img src="./img/time3.png" alt="time" />
+              </span>
+              <span> -- </span>
+              <span class="time">00</span>
+            </p>
+            <p class="message">
+              <span>
+                <img src="./img/score.png" alt="score" />
+              </span>
+              <span> -- </span>
+              <span class="score">00</span>
+            </p>
+            <p class="message">
+              <span>
+                <img src="./img/playerBullet.png" alt="score" />
+              </span>
+              <span> -- </span>
+              <span class="shoot">00</span>
+            </p>
+          </div>
+          <input type="text" id="name" placeholder="por favor, escriba su nombre" />
+          <button id="submit-btn" class="btn" disabled>continuar el juego</button>
+        </div>
+        <div id="rank" class="column absolute">
+          <table class="scroll">
+            <thead>
+              <tr>
+                <th>clasificación</th>
+                <th>nombre</th>
+                <th>Fracción</th>
+                <th>el número de segundos</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+          <button id="restart-btn" class="btn">volver a comenzar</button>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <span
+        >Hecho por Maureen Barahona /<a
+          href="https://github.com/UTH-maureenBarahona/star-battle"
+          >GitHub</a
+        >
+      </span>
+    </footer>
+   
+  </body>
 </html>
